[package]
name = "todel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.1"
cpal = "0.15.2"
futures = "0.3.28"
rubato = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
whisper-rs = "0.5.0"
